--- a/src/NBT.WebUI/Components/Layout/ReconnectModal.razor
+++ b/src/NBT.WebUI/Components/Layout/ReconnectModal.razor
@@ -1,6 +1,4 @@
-﻿<script type="module" src="@Assets["Components/Layout/ReconnectModal.razor.js"]"></script>
-
-<dialog id="components-reconnect-modal" data-nosnippet>
+﻿<dialog id="components-reconnect-modal" data-nosnippet>
     <div class="components-reconnect-container">
         <div class="components-rejoining-animation" aria-hidden="true">
             <div></div>
