--- a/src/NBT.WebUI/Components/Layout/MainLayout.razor
+++ b/src/NBT.WebUI/Components/Layout/MainLayout.razor
@@ -1,23 +1,47 @@
-﻿@inherits LayoutComponentBase
+@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+<FluentLayout>
+    <FluentHeader>
+        <div class="header-container">
+            <FluentStack Orientation="Orientation.Horizontal" HorizontalAlignment="HorizontalAlignment.Start">
+                <FluentNavLink Href="/" >
+                    <span class="site-title">🎓 National Benchmark Tests</span>
+                </FluentNavLink>
+            </FluentStack>
+            <FluentSpacer />
+            <FluentStack Orientation="Orientation.Horizontal" HorizontalAlignment="HorizontalAlignment.End">
+                <FluentButton Appearance="Appearance.Lightweight" Href="/contact" >
+                    📧 Contact Us
+                </FluentButton>
+            </FluentStack>
         </div>
+    </FluentHeader>
 
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
+    <FluentStack Class="main-container" Orientation="Orientation.Horizontal">
+        <NavMenu />
+        
+        <FluentBodyContent Class="body-content">
+            <div class="content">
+                @Body
+            </div>
+        </FluentBodyContent>
+    </FluentStack>
 
-<div id="blazor-error-ui" data-nosnippet>
-    An unhandled error has occurred.
-    <a href="." class="reload">Reload</a>
-    <span class="dismiss">🗙</span>
-</div>
+    <FluentFooter>
+        <div class="footer-content">
+            <FluentStack Orientation="Orientation.Vertical" HorizontalAlignment="HorizontalAlignment.Center">
+                <p>&copy; @DateTime.Now.Year National Benchmark Tests. All rights reserved.</p>
+                <FluentStack Orientation="Orientation.Horizontal" HorizontalGap="20">
+                    <FluentAnchor Href="/privacy">Privacy Policy</FluentAnchor>
+                    <FluentAnchor Href="/terms">Terms of Service</FluentAnchor>
+                    <FluentAnchor Href="/accessibility">Accessibility</FluentAnchor>
+                </FluentStack>
+            </FluentStack>
+        </div>
+    </FluentFooter>
+</FluentLayout>
+
+<FluentToastProvider />
+<FluentDialogProvider />
+<FluentTooltipProvider />
+<FluentMessageBarProvider />
