--- a/src/NBT.WebUI/Components/_Imports.razor
+++ b/src/NBT.WebUI/Components/_Imports.razor
@@ -6,6 +6,7 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using Microsoft.FluentUI.AspNetCore.Components
 @using NBT.WebUI
 @using NBT.WebUI.Components
 @using NBT.WebUI.Components.Layout
