--- a/src/NBT.WebUI/Components/Routes.razor
+++ b/src/NBT.WebUI/Components/Routes.razor
@@ -1,6 +1,16 @@
-﻿<Router AppAssembly="typeof(Program).Assembly" NotFoundPage="typeof(Pages.NotFound)">
+﻿<Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
         <FocusOnNavigate RouteData="routeData" Selector="h1" />
     </Found>
+    <NotFound>
+        <PageTitle>Not Found</PageTitle>
+        <LayoutView Layout="typeof(Layout.MainLayout)">
+            <div class="content">
+                <h1>404 - Page Not Found</h1>
+                <p>Sorry, the page you are looking for could not be found.</p>
+                <a href="/">Return to Home</a>
+            </div>
+        </LayoutView>
+    </NotFound>
 </Router>
