Refactor: Move navigation from sidebar to top horizontal menu
- Changed navigation from vertical sidebar to horizontal top menu
- Matches original NBT website design pattern
- Removed NavGroup for cleaner top navigation
- Updated layout CSS for proper spacing
- Improved responsive design

--- a/src/NBT.WebUI/Components/Layout/MainLayout.razor
+++ b/src/NBT.WebUI/Components/Layout/MainLayout.razor
@@ -17,15 +17,13 @@
         </div>
     </FluentHeader>
 
-    <FluentStack Class="main-container" Orientation="Orientation.Horizontal">
-        <NavMenu />
-        
-        <FluentBodyContent Class="body-content">
-            <div class="content">
-                @Body
-            </div>
-        </FluentBodyContent>
-    </FluentStack>
+    <NavMenu />
+
+    <FluentBodyContent Class="body-content">
+        <div class="content">
+            @Body
+        </div>
+    </FluentBodyContent>
 
     <FluentFooter>
         <div class="footer-content">
@@ -40,6 +38,11 @@
         </div>
     </FluentFooter>
 </FluentLayout>
+
+<FluentToastProvider />
+<FluentDialogProvider />
+<FluentTooltipProvider />
+<FluentMessageBarProvider />
 
 <FluentToastProvider />
 <FluentDialogProvider />
