Fix: Navigation menu now spans full width with proper spacing
- Changed nav from centered to space-evenly distribution
- Menu items now cover full width of page
- Each item flexes equally with proper spacing
- Added dividers between menu items
- Responsive wrapping for mobile devices

--- a/src/NBT.WebUI/Components/Layout/NavMenu.razor
+++ b/src/NBT.WebUI/Components/Layout/NavMenu.razor
@@ -1,5 +1,5 @@
 <nav class="top-nav">
-    <FluentStack Orientation="Orientation.Horizontal" HorizontalGap="0" Wrap="true" HorizontalAlignment="HorizontalAlignment.Center">
+    <div class="nav-container">
         <FluentNavLink Href="/" Match="NavLinkMatch.All">
             Home
         </FluentNavLink>
@@ -27,6 +27,6 @@
         <FluentNavLink Href="/resources">
             Resources
         </FluentNavLink>
-    </FluentStack>
+    </div>
 </nav>
 
